[gd_scene load_steps=5 format=3 uid="uid://bul6tvti1f6m5"]

[ext_resource type="Script" uid="uid://71e3jeqbcps5" path="res://Level 3/player_boat/river_background.gd" id="1_ugelq"]
[ext_resource type="Texture2D" uid="uid://cgyds3kclwxp5" path="res://Level 3/assets/New Piskel (3).png" id="2_ugelq"]
[ext_resource type="Texture2D" uid="uid://du4s2rfwdf76y" path="res://Level 3/assets/New Piskel (5).png" id="3_xhac0"]
[ext_resource type="Texture2D" uid="uid://8leru8xcuhi2" path="res://Level 3/assets/New Piskel (6).png" id="4_16ysi"]

[node name="RiverBackground" type="ParallaxBackground"]
script = ExtResource("1_ugelq")

[node name="WaterLayer" type="ParallaxLayer" parent="."]
unique_name_in_owner = true
motion_mirroring = Vector2(240, 0)

[node name="Water" type="TextureRect" parent="WaterLayer"]
offset_right = 280.0
offset_bottom = 160.0
texture = ExtResource("2_ugelq")
stretch_mode = 1
metadata/_edit_use_anchors_ = true

[node name="LightWaterLayer" type="ParallaxLayer" parent="."]
unique_name_in_owner = true
motion_mirroring = Vector2(240, 0)

[node name="LightWater" type="TextureRect" parent="LightWaterLayer"]
offset_right = 280.0
offset_bottom = 160.0
texture = ExtResource("3_xhac0")
stretch_mode = 1
metadata/_edit_use_anchors_ = true

[node name="DarkWaterLayer" type="ParallaxLayer" parent="."]
unique_name_in_owner = true
motion_mirroring = Vector2(240, 0)

[node name="DarkWater" type="TextureRect" parent="DarkWaterLayer"]
offset_right = 280.0
offset_bottom = 160.0
texture = ExtResource("4_16ysi")
stretch_mode = 1
metadata/_edit_use_anchors_ = true
